<resources>
    <string name="app_name">MangaWorld</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_menu">Trang chủ</string>
    <string name="community_menu">Cộng đồng</string>
    <string name="bookcase_menu">Tủ sách</string>
    <string name="info_menu">Hồ sơ</string>
    <string name="search_menu">Tìm kiếm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trang_thai_false">Trạng thái: Đang tiến hành</string>
    <string name="trang_thai_true">Trạng thái: Hoàn thành</string>
    <string name="like">Yêu thích</string>
    <string name="dis_like">Bỏ thích</string>
    <string name="personal_information">Thông tin cá nhân</string>
    <string name="name">Tên:</string>
    <string name="max_char">Tối đa 25 ký tự</string>
    <string name="phone_number">Số điện thoại:</string>
    <string name="log_out">Đăng xuất</string>
    <string name="replace_password">Đổi mật khẩu</string>
    <string name="access">Xác nhận</string>
    <string name="new_pass">Mật khẩu mới:</string>
    <string name="old_pass">Mật khẩu cũ:</string>
    <string name="re_input">Nhập lại:</string>
    <string name="gmail">Gmail:</string>
    <string name="hint_null">Chưa có</string>
    <string name="connectFail">Kết nối thất bại</string>
    <string name="delete">Xoá</string>
    <string name="viewMore">Xem thêm</string>
    <string name="viewMorePlus">Xem thêm >></string>
    <string name="bxh">Bảng xếp hạng</string>
    <string name="taikhoan">Tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="dont_have_account">Chưa có tài khoản?</string>
    <string name="sign_up">Đăng kí</string>
    <string name="re_password">Nhập lại mật khẩu</string>
    <string name="forgot_password"><u>Quên mật khẩu</u></string>
    <string name="u_sign_up"><u>Đăng kí</u></string>
    <string name="u_login"><u>Đăng nhập</u></string>
    <string name="need_login">Bạn cần đăng nhập<br /> để có thể sử dụng chức năng này</string>
    <string name="Chapter">Chương</string>
    <string name="ErrorAPI">Lỗi đường truyền</string>
    <string name="manga">Truyện</string>
    <string name="category">Thể loại</string>
    <string name="post_text">Đăng tin, chia sẻ, đề cử truyện</string>
    <string name="recommend">Đề cử :</string>
    <string name="highlights">Nổi bật :</string>
    <string name="outGroup">Rời khỏi nhóm</string>
    <string name="port">Đăng</string>
    <string name="destroy_port">Huỷ đăng</string>
    <string name="create_port">Tạo bài viết</string>
    <string name="what_are_you_thinking">Bạn đang nghĩ gì?</string>
    <string name="add_image">Thêm ảnh</string>
    <string name="admin">Admin</string>
    <string name="number_admin">Quản trị viên:</string>
    <string name="next_page">V</string>
    <string name="go">Đi</string>
    <string name="threeDots">...</string>
    <string name="comment">Bình luận</string>
    <string name="like_status">Thích</string>
    <string name="input_comment">Nhập bình luận</string>
    <string name="none_comment">Bài viết chưa có bình luận nào.</string>
    <string name="reply">Trả lời</string>
    <string name="hide_status">Ẩn bài viết</string>
    <string name="group_selected_0">Nhóm đã chọn: 0</string>
    <string name="success">Thành công</string>
    <string name="joined_group">Đã tham gia:</string>
    <string name="my_groups">Nhóm của tôi</string>
    <string name="no_comment_in_post">Bài viết chưa có bình luận nào</string>
    <string name="destroy">Huỷ</string>
    <string name="like_groups">Yêu thích nhóm:</string>
    <string name="news">Bảng tin:</string>
    <string name="need_invited">Nhóm riêng tư cần phải tham gia để đọc tin</string>
    <string name="gi_i_thi_u_v_nh_m">Giới thiệu về nhóm .....</string>
    <string name="created_group">Tạo nhóm</string>
    <string name="gi_i_thi_u">Giới thiệu:</string>
    <string name="public_group">Công khai</string>
    <string name="private_group">Riêng tư</string>
    <string name="browser_post">Duyệt bài</string>
    <string name="browser_member">Duyệt thành viên</string>
    <string name="refuse">Từ chối</string>
    <string name="kh_ng_c_y_u_c_u_c_n_ph_duy_t">Không có yêu cầu cần phê duyệt</string>
    <string name="kh_ng_c_b_i_vi_t_c_n_ph_duy_t">Không có bài viết cần phê duyệt</string>
    <string name="tr_ng_th_i">Trạng thái:</string>
    <string name="manager">Quản lý</string>
    <string name="member">Thành viên:</string>
    <string name="delete_group">Xoá nhóm</string>
    <string name="rename_group">Tên nhóm</string>
    <string name="hu_b">Huỷ bỏ</string>
    <string name="intro">Giới thiệu</string>
    <string name="leave_group">Rời nhóm</string>
    <string name="delete_post">Xoá bài viết</string>
    <string name="status">Trạng thái:</string>
    <string name="name_group">Tên nhóm:</string>
    <string name="seach_group">Tìm kiếm nhóm</string>
    <string name="ch_n_th_lo_i">Chọn thể loại</string>
</resources>