<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    android:orientation="vertical"
    android:outlineAmbientShadowColor="@color/black"
    android:paddingHorizontal="10dp">

    <ImageView
        android:layout_width="146dp"
        android:layout_height="125dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@mipmap/logo"
        android:layoutDirection="inherit" />

    <include
        android:id="@+id/edt_username"
        layout="@layout/item_edit_text_login" />


    <include
        android:id="@+id/edt_password"
        layout ="@layout/item_edit_text_login" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="#386991"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/forgot_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="10dp"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/u_sign_up"
            android:textSize="16sp"
            android:textColor="#03A9F4" />

    </LinearLayout>

</LinearLayout>