<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="50dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:gravity="center_horizontal"
        android:text="@string/create_port"
        android:textSize="22sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/button_close_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:contentDescription="@string/destroy_port"
        android:src="@drawable/icon_close" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_select_group"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:background="@drawable/button_port_background"
        android:text="@string/port"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="RelativeOverlap" />

    <FrameLayout
        android:id="@+id/hide_key_board"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/button_select_group" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/button_select_group"
        android:background="@color/post_gray" />

    <EditText
        android:id="@+id/edit_text_port"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@id/button_select_group"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_edit_text_create"
        android:gravity="top"
        android:hint="@string/what_are_you_thinking"
        android:importantForAutofill="no"
        android:inputType="text|textMultiLine"
        android:padding="8dp"
        android:textSize="18sp" />

    <include
        android:id="@+id/manga_port"
        layout="@layout/item_manga_category"
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:layout_below="@id/edit_text_port"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="8dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/button_add_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/manga_port"
        android:layout_marginVertical="10dp"
        android:drawablePadding="15dp"
        android:gravity="center"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:text="@string/add_image"
        android:textSize="25sp"
        android:visibility="visible"
        app:drawableLeftCompat="@drawable/icon_add_image" />

    <ImageView
        android:id="@+id/image_attach_port_status"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/manga_port"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:scaleType="centerCrop"
        android:layout_toEndOf="@id/button_add_image"
        android:layout_toRightOf="@id/button_add_image"
        android:visibility="gone"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/button_delete_image_attach"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:gravity="center_horizontal"
        android:text="@string/delete"
        android:background="@color/post_gray"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_below="@id/image_attach_port_status"
        android:visibility="gone" />
    <FrameLayout
        android:id="@+id/loading_port_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <View
            android:layout_width="match_parent"
            android:background="@color/black"
            android:alpha="0.6"
            android:layout_height="match_parent"/>
        <include
            layout="@layout/card_view_bar"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </FrameLayout>
</RelativeLayout>