<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_popup">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/background_popup_text_yelow"
        android:gravity="center"
        android:text="@string/ch_n_th_lo_i"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_select_category_group"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="14dp"/>

    <TextView
        android:id="@+id/button_select_group_accept"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginHorizontal="40dp"
        android:layout_below="@id/rcv_select_category_group"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border_text_view_group"
        android:gravity="center"
        android:paddingHorizontal="15dp"
        android:text="@string/access"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/button_select_group_refuse"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/rcv_select_category_group"
        android:background="@drawable/border_comment_text"
        android:gravity="center"
        android:paddingHorizontal="15dp"
        android:text="@string/hu_b"
        android:textSize="20sp"
        android:textStyle="bold" />
</RelativeLayout>