<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">
    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/info_menu"
        android:textColor="#e09145"
        android:textSize="28sp"
        android:textStyle="bold" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_avatar_info"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <ImageView
        android:id="@+id/reset_avatar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="110dp"
        android:layout_toEndOf="@id/img_avatar_info"
        android:layout_toRightOf="@id/img_avatar_info"
        android:scaleType="centerCrop"
        android:src="@drawable/icon_reset"
        android:visibility="gone" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_avatar_info"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/personal_information"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_expand_info"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_baseline_keyboard_arrow_down_24" />

        <RelativeLayout
            android:id="@+id/relative_layout_info_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_avatar_info"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="60dp"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_text_name_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginBottom="10dp"
                android:layout_toLeftOf="@id/button_edit_text_name"
                android:background="@android:color/transparent"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/max_char"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions"
                android:maxLength="25"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/button_edit_text_name"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginHorizontal="20dp"
                android:contentDescription="@null"
                android:src="@drawable/icon_edit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_text_name_info"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_text_sdt_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_text_name_info"
                android:layout_marginStart="120dp"
                android:layout_marginLeft="120dp"
                android:layout_marginEnd="65dp"
                android:layout_marginRight="65dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/hint_null"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="10"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_text_sdt_info"
                android:text="@string/gmail"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_text_gmail_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_text_sdt_info"
                android:layout_marginHorizontal="65dp"
                android:layout_marginBottom="20dp"
                android:background="@android:color/transparent"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/hint_null"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions"
                android:textSize="18sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_view_info"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/replace_password"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_expand_password"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/ic_baseline_keyboard_arrow_down_24" />

        <RelativeLayout
            android:id="@+id/relative_layout_password_info_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_avatar_info"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="60dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/old_pass"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginLeft="120dp"
                android:layout_marginEnd="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/border_edit_text"
                android:hint="@null"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingHorizontal="5dp"
                android:paddingVertical="2dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/old_password"
                android:text="@string/new_pass"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/old_password"
                android:layout_marginStart="120dp"
                android:layout_marginLeft="120dp"
                android:layout_marginEnd="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/border_edit_text"
                android:hint="@null"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingHorizontal="5dp"
                android:paddingVertical="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/new_password"
                android:text="@string/re_input"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/new_password_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/new_password"
                android:layout_marginStart="120dp"
                android:layout_marginLeft="120dp"
                android:layout_marginEnd="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/border_edit_text"
                android:hint="@null"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingHorizontal="5dp"
                android:paddingVertical="2dp" />

            <Button
                android:id="@+id/btn_change_password"
                android:layout_width="110dp"
                android:layout_height="45dp"
                android:layout_below="@id/new_password_2"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:text="@string/access"
                android:textAllCaps="false" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_log_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_view_password"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/log_out"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>
</RelativeLayout>