<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/create_group_fragment_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:theme="@style/ActionBarTheme" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/create_group_fragment_toolbar"
            android:layout_margin="5dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/avatar_group_create_fragment"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_camera"
                tools:ignore="ContentDescription" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/create_group_fragment_toolbar"
            android:layout_marginStart="85dp"
            android:layout_marginLeft="85dp"
            android:layout_marginTop="5dp"
            android:text="@string/name_group"
            android:textSize="20sp"
            android:textStyle="bold" />

        <include
            android:id="@+id/edit_text_name_create"
            layout="@layout/item_edit_text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/create_group_fragment_toolbar"
            android:layout_marginStart="85dp"
            android:layout_marginLeft="85dp"
            android:layout_marginTop="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_text_name_create"
            android:layout_marginVertical="10dp"
            android:text="@string/gi_i_thi_u"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text_intro_create_group"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@id/edit_text_name_create"
            android:layout_marginTop="40dp"
            android:background="@drawable/border_edit_text_create"
            android:gravity="top"
            android:hint="@string/gi_i_thi_u_v_nh_m"
            android:padding="8dp"
            android:verticalScrollbarPosition="right"
            tools:ignore="Autofill,TextFields" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@id/edit_text_intro_create_group"
            android:layout_marginVertical="15dp"
            android:text="@string/status"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_group_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_text_intro_create_group"
            android:layout_marginVertical="15dp"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="120dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio_button_public"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/public_group"
                android:checked="true"/>
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio_button_private"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginHorizontal="25dp"
                android:text="@string/private_group" />
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@id/radio_group_create"
            android:text="Thể loại:"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_category_create_group"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="90dp"
            android:layout_below="@id/radio_group_create"
            android:text="Lựa chọn..."
            android:textSize="20sp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_create_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_category_create_group"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_port_background"
            android:text="@string/created_group"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/loading_create_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <View
            android:layout_width="match_parent"
            android:background="@color/black"
            android:alpha="0.6"
            android:layout_height="match_parent"/>
        <include
            layout="@layout/card_view_bar"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </FrameLayout>
</FrameLayout>
